objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <externalId>true</externalId>
        <label>OrderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>